# escola-api

./: .gitignore  README.md  db_seed.sql  pyproject.toml  setup.ps1
src/escola_api/: app.py  dependencias.py  main.py
src/escola_api/api/v1/: aluno_controller.py  curso_controller.py  matricula_controller.py
src/escola_api/database/: banco_dados.py  modelos.py
src/escola_api/schemas/: aluno_schemas.py  curso_schemas.py  matricula_scemas.py
